# swagger.yaml
@@ -313,8 +313,13 @@ paths:
           application/json:
             schema:
               type: object
+              required:
+                - email
+                - password
               properties:
                 email:
+                  type: string
+                password:
                   type: string
       responses:
         '200':
